--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "intervention/image": "^2.5",
+        "intervention/image": "^2.7"
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
@@ -61,6 +61,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "@php -r \"if (!extension_loaded('gd')) { echo 'GD extension is not enabled. Please install php8.2-gd.'; exit(1); }\""
+        ],
+        "post-update-cmd": [
+            "@php -r \"if (!extension_loaded('gd')) { echo 'GD extension is not enabled. Please install php8.2-gd.'; exit(1); }\""
         ]
     }
 }
